Prod-EU/force-app/main/default/objects/Related_Product__c/Related_Product__c.object-meta.xml
<CustomObject>
    <description>Jagan 05/04/2017 - Tracks the products related to each Medical Advice Number tied to Germany price list.</description>
    <label>Related Product</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>