Prod-EU/force-app/main/default/objects/Related_Product__c/fields/Medical_Advice_Number__c.field-meta.xml
<CustomField>
    <fullName>Medical_Advice_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medical Advice Number</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Product_Schedule_Medical_Advice_Number</relationshipName>
    <type>Lookup</type>
</CustomField>