Prod-EU/force-app/main/default/objects/Related_Product__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipName>Product_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>