Prod-EU/force-app/main/default/objects/Related_Product__c/fields/Valid_Period__c.field-meta.xml
<CustomField>
    <fullName>Valid_Period__c</fullName>
    <label>Valid Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>7 Days</fullName>
            </value>
            <value>
                <fullName>10 Months</fullName>
            </value>
            <value>
                <fullName>11 Months</fullName>
            </value>
            <value>
                <fullName>14 Days</fullName>
            </value>
            <value>
                <fullName>21 Days</fullName>
            </value>
            <value>
                <fullName>4 Months</fullName>
            </value>
            <value>
                <fullName>5 Months</fullName>
            </value>
            <value>
                <fullName>7 Months</fullName>
            </value>
            <value>
                <fullName>8 Months</fullName>
            </value>
            <value>
                <fullName>9 Months</fullName>
            </value>
            <value>
                <fullName>13 Months</fullName>
            </value>
            <value>
                <fullName>14 Months</fullName>
            </value>
            <value>
                <fullName>15 Months</fullName>
            </value>
            <value>
                <fullName>16 Months</fullName>
            </value>
            <value>
                <fullName>17 Months</fullName>
            </value>
            <value>
                <fullName>18 Months</fullName>
            </value>
            <value>
                <fullName>19 Months</fullName>
            </value>
            <value>
                <fullName>20 Months</fullName>
            </value>
            <value>
                <fullName>21 Months</fullName>
            </value>
            <value>
                <fullName>22 Months</fullName>
            </value>
            <value>
                <fullName>23 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>